member-db.yaml
# mysql-member-resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql-member-pod
  namespace: ptfd-db
  labels:
    app: mysql-member
spec:
  containers:
  - name: mysql-member-db
    image: mysql:latest
    
    ports:
    - containerPort: 3306
    volumeMounts:
    - name: mysql-client-config
      
      mountPath: /etc/mysql/my.cnf
      subPath: my.cnf
      readOnly: true
  volumes:
  - name: mysql-client-config
    
    configMap:
      name: mysql-client-config
