purchase-db.yaml
# mysql-payment-resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql-payment-pod
  labels:
    app: mysql-payment
spec:
  containers:
  - name: mysql-payment-db
    image: mysql:latest
    ports:
    - containerPort: 3306
    volumeMounts:
    - name: mysql-client-config
      mountPath: /etc/mysql/my.cnf
      subPath: my.cnf
      readOnly: true
  volumes:
  - name: mysql-client-config
    configMap:
      name: mysql-client-config
